fix responsive issue on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ body {
 #app {
     border-width: 8px 0 0;
     border-top-style: solid;
+    width: 100%;
+    overflow-x: hidden;
     border-image: linear-gradient(88deg, var(--purple), var(--pink)) 3;
 }
 
@@ -410,7 +412,7 @@ a.header__social_icon {
     .about,
     .about__cover {
         width: 100%;
-        min-width: 377px;
+        /* min-width: 377px; */
         height: 100%;
         min-height: 400px;
     }
@@ -446,10 +448,30 @@ a.header__social_icon {
         text-overflow: ellipsis;
     }
 
-    .project__description {
-        margin-top: 2px;
+    .scroll-link {
+        bottom: -2rem;
     }
 
+    .project__content {
+        margin: 0px;
+    }
+
+    .project__title {
+        padding-left: 16px;
+    }
+
+    .project__description {
+        margin-top: 2px;
+        padding-left: 16px;
+    }
+
+    .project__thumbnail {
+        padding: 8px;
+    }
+
+    .project__link {
+        padding: 8px;
+    }
     .design__content {
         grid-template-columns: repeat(1, 1fr);
     }
